Update surefire options